--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,34 @@
 body {
-   background: gray;
-   
-   display:flex;
-   align-items: center;
-   justify-content: center;
-   padding: 10px;
+  background: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
 
+.container,
+.display,
+.btns {
+  background: white;
+  border: 2px solid black;
+  padding: 10px;
 }
 
 
-.container, .display, .btns{
-    background:white;
-    border: 2px solid black;
-padding: 10px;
-    
-    
-
+.display {
+  display: flex;
+  justify-content: end;
+  padding: 5px;
 }
 
-.display{
-    display: flex;
-    justify-content: end;
-    padding: 5px;
+.btns {
+  width: 300px;
+  height: 300px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+
+  gap: 2px;
 }
-
-.btns{
-    width:300px;
-    heigth: 500px;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    
-    gap: 2px;
-
-}
-
-
-
-
