--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
 body {
-  background: gray;
+  background: green;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  height: 100vh;
   margin: 0;
-      height: 100vh;
-
 }
 
 .container,
