--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,23 @@ body {
   padding: 10px;
 }
 
+.container{
+    
+}
+
 .display {
   display: flex;
   justify-content: end;
   padding: 5px;
+  font-size: 50px;
 }
 
+
+
 .btns {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
+  
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -31,3 +39,9 @@ body {
 
   gap: 2px;
 }
+
+button{
+    font-size: 20px;
+}
+
+
