--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   margin: 0;
 }
 
@@ -11,19 +12,20 @@ body {
 .display,
 .btns {
   background: white;
-  border: 2px solid black;
+  border: 3px solid black;
   padding: 10px;
 }
 
-.container{
-    
-}
+
 
 .display {
   display: flex;
   justify-content: end;
   padding: 5px;
   font-size: 50px;
+    max-width: 500px;
+  min-height:60px;
+  
 }
 
 
@@ -37,7 +39,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(4, 1fr);
 
-  gap: 2px;
+  gap: 8px;
 }
 
 button{
